--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+	compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
 }
 
