--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
-	compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
 }
 
