--- a/contact-manager-web/build.gradle
+++ b/contact-manager-web/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+    compile group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
     compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
     compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
