--- a/contact-manager-api/build.gradle
+++ b/contact-manager-api/build.gradle
@@ -1,7 +1,11 @@
 dependencies {
     compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
-    compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
-	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+    compile group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
+    compile group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
+    compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+    compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.1'    
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.1'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.1'
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 }
