Configured ezvcard dependencies.

--- a/contact-manager-api/build.gradle
+++ b/contact-manager-api/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
     compileOnly group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
 }
