--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -1,9 +1,14 @@
 dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
-    compile group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"	
+    compile group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
+    compile group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.1'    
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.1'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.1'
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.3'	
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
 }
 
