--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
     compileOnly group: 'org.jsoup', name: 'jsoup', version: '1.8.3'	
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
+	compile group: "javax.portlet", name: "portlet-api", version: "2.0"
+    compile group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 }
 
 buildService {
