--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -1,5 +1,3 @@
-javax.portlet.display-name.contact_manager_web_ContactManager=contact-manager-web JSP
-javax.portlet.keywords.contact_manager_web_ContactManager=contact.manager.web,jsp
-javax.portlet.short-title.contact_manager_web_ContactManager=contact-manager-web JSP
-javax.portlet.title.contact_manager_web_ContactManager=contact-manager-web JSP Portlet
-contact_manager_web_ContactManager.caption=Hello from contact-manager-web JSP!
+contact-manager=Contact Manager
+permissions-of-contact=Permissions of Contact
+you-dont-have-the-required-permissions=You don't have the required permissions.
