Preliminary form-navigator implementation.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -1,3 +1,28 @@
+#
+# Language.properties: Default resource bundle of the contact-manager portlet
+# 
+# Created:  2015-05-07 15:32 by Christian Berndt
+# Modified: 2017-04-12 17:43 by Christian Berndt
+# Version:  1.2.3
+#
 contact-manager=Contact Manager
+email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
+formatted-name=Formatted Name
+formatted-name-help=Specify the formatted text corresponding to the name of the object the vCard represents.
+import-export=Import / Export
+impp.uri-help=Specify the URI for instant messaging and presence protocol communications with the object the vCard represents.
+instant-messaging=Instant Messaging
+kind=Kind
+kind-help=Specify the kind of object the vCard represents.
+nickname=Nickname
+nickname-help=Specify the text corresponding to the nickname of the object the vCard represents. The nickname is the descriptive name given instead of or in addition to the one belonging to
+no-contacts-were-found=No contacts were found. 
 permissions-of-contact=Permissions of Contact
+phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
+structured-name=Structured Name
+structured-name.additional=Middle
+structured-name.family=Last
+structured-name.given=First
+structured-name.prefix=Title
+structured-name.suffix=Suffix
 you-dont-have-the-required-permissions=You don't have the required permissions.
