Updated namespace configuration
in order to avoid namespace conflicts with other inofix modules.

--- a/contact-manager-service/src/main/resources/service.properties
+++ b/contact-manager-service/src/main/resources/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=Inofix
-    build.number=69
-    build.date=1492025460052
+    build.namespace=inofix_cm
+    build.number=70
+    build.date=1492431617585
     build.auto.upgrade=true
