--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -7,6 +7,9 @@ dependencies {
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.1'
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
+    compileOnly group: "com.liferay", name: "com.liferay.exportimport.api", version: "2.0.0"
+    compileOnly group: "com.liferay", name: "com.liferay.exportimport.service", version: "3.0.0" 
+    compileOnly group: "com.liferay", name: "com.liferay.xstream.configurator.api", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
     compileOnly group: 'org.jsoup', name: 'jsoup', version: '1.8.3'	
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
