--- a/contact-manager-web/build.gradle
+++ b/contact-manager-web/build.gradle
@@ -2,15 +2,12 @@ dependencies {
     compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
     compileOnly group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
     compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
-    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.1'    
-    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.1'
-    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.1'
+    compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
     compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
     compileOnly group: "javax.servlet", name: "servlet-api", version: "2.5"
     compileOnly group: "jstl", name: "jstl", version: "1.2"
-    compileOnly group: 'org.jsoup', name: 'jsoup', version: '1.8.3' 
     compileOnly group: "org.osgi", name: "org.osgi.compendium", version: "5.0.0"
     compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api") 
     compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-service")
