--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,8 +2,8 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-04-12 17:43 by Christian Berndt
-# Version:  1.2.3
+# Modified: 2017-06-19 18:16 by Christian Berndt
+# Version:  1.2.4
 #
 contact-manager=Contact Manager
 email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
@@ -14,10 +14,12 @@ impp.uri-help=Specify the URI for instant messaging and presence protocol commun
 instant-messaging=Instant Messaging
 kind=Kind
 kind-help=Specify the kind of object the vCard represents.
+mailing-address=Mailing Address
 nickname=Nickname
 nickname-help=Specify the text corresponding to the nickname of the object the vCard represents. The nickname is the descriptive name given instead of or in addition to the one belonging to
 no-contacts-were-found=No contacts were found. 
 permissions-of-contact=Permissions of Contact
+personal-information=Personal Information
 phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
 structured-name=Structured Name
 structured-name.additional=Middle
