Implemented contacts import UI.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,10 +2,11 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-06-19 18:16 by Christian Berndt
-# Version:  1.2.4
+# Modified: 2017-06-20 17:56 by Christian Berndt
+# Version:  1.2.5
 #
 contact-manager=Contact Manager
+drop-a-v-card-file-here-to-import=Drop a vCard file here to import.
 email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
 formatted-name=Formatted Name
 formatted-name-help=Specify the formatted text corresponding to the name of the object the vCard represents.
@@ -15,9 +16,11 @@ instant-messaging=Instant Messaging
 kind=Kind
 kind-help=Specify the kind of object the vCard represents.
 mailing-address=Mailing Address
+new-contact=New Contact
 nickname=Nickname
 nickname-help=Specify the text corresponding to the nickname of the object the vCard represents. The nickname is the descriptive name given instead of or in addition to the one belonging to
 no-contacts-were-found=No contacts were found. 
+no-import-processes-were-found=No import processes were found.
 permissions-of-contact=Permissions of Contact
 personal-information=Personal Information
 phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
