Disabled unsupported workflow-status.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -3,8 +3,10 @@
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
 # Modified: 2017-06-20 17:56 by Christian Berndt
-# Version:  1.2.5
+# Version:  1.2.6
 #
+columns=Columns
+contact-id=ID
 contact-manager=Contact Manager
 drop-a-v-card-file-here-to-import=Drop a vCard file here to import.
 email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
