Process organizational parts.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,9 +2,11 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-06-20 17:56 by Christian Berndt
-# Version:  1.2.6
+# Modified: 2017-06-23 19:31 by Christian Berndt
+# Version:  1.2.7
 #
+appearance=Appearance
+calendar-requests=Calendar Requests
 columns=Columns
 contact-id=ID
 contact-manager=Contact Manager
@@ -32,4 +34,7 @@ structured-name.family=Last
 structured-name.given=First
 structured-name.prefix=Title
 structured-name.suffix=Suffix
+use-lexicon=Use Lexicon? 
+web-addresses=Web Addresses
+work=Work
 you-dont-have-the-required-permissions=You don't have the required permissions.
