Re-enabled auto-fields on general and personal panel.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,21 +2,26 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-06-23 19:31 by Christian Berndt
-# Version:  1.2.7
+# Modified: 2017-06-23 21:34 by Christian Berndt
+# Version:  1.2.8
 #
 appearance=Appearance
 calendar-requests=Calendar Requests
+calendars=Calendars
 columns=Columns
 contact-id=ID
 contact-manager=Contact Manager
+department=Department
 drop-a-v-card-file-here-to-import=Drop a vCard file here to import.
 email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
 formatted-name=Formatted Name
 formatted-name-help=Specify the formatted text corresponding to the name of the object the vCard represents.
+free-busy=Free / Busy 
+free-busy-url=Free / Busy URL
 import-export=Import / Export
 impp.uri-help=Specify the URI for instant messaging and presence protocol communications with the object the vCard represents.
 instant-messaging=Instant Messaging
+job=Job
 kind=Kind
 kind-help=Specify the kind of object the vCard represents.
 mailing-address=Mailing Address
@@ -25,9 +30,11 @@ nickname=Nickname
 nickname-help=Specify the text corresponding to the nickname of the object the vCard represents. The nickname is the descriptive name given instead of or in addition to the one belonging to
 no-contacts-were-found=No contacts were found. 
 no-import-processes-were-found=No import processes were found.
+office=Office
 permissions-of-contact=Permissions of Contact
 personal-information=Personal Information
 phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
+po-box=PO Box
 structured-name=Structured Name
 structured-name.additional=Middle
 structured-name.family=Last
