Upgrade contact-editor to 7.0.x.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,10 +2,11 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-06-23 21:34 by Christian Berndt
-# Version:  1.2.8
+# Modified: 2017-06-24 00:54 by Christian Berndt
+# Version:  1.2.9
 #
 appearance=Appearance
+birthplace=Birthplace
 calendar-requests=Calendar Requests
 calendars=Calendars
 columns=Columns
@@ -24,6 +25,8 @@ instant-messaging=Instant Messaging
 job=Job
 kind=Kind
 kind-help=Specify the kind of object the vCard represents.
+logos=Logos
+logo.file-help=Select one or more graphic images of a logo associated with the object the vCard represents.
 mailing-address=Mailing Address
 new-contact=New Contact
 nickname=Nickname
@@ -34,13 +37,20 @@ office=Office
 permissions-of-contact=Permissions of Contact
 personal-information=Personal Information
 phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
+photos=Photos
+photo.file-help=Select one or more image or photograph information that annotates some aspect of the object the vCard represents.
 po-box=PO Box
+sounds=Sounds
+sound.file-help=Specify one or more digital sound content informations that annotate some aspect of the vCard. This property is often used to specify the proper pronunciation of the name property value of the vCard.
 structured-name=Structured Name
 structured-name.additional=Middle
 structured-name.family=Last
 structured-name.given=First
 structured-name.prefix=Title
 structured-name.suffix=Suffix
+the-image-file-format-is-not-supported=The format of the uploaded image file is not supported. Please use PNG, JPG, or GIF.
+the-key-file-format-is-not-supported=The format of the uploaded key file is not supported. Please use GPG, PGP, or X509.
+the-sound-file-format-is-not-supported=The format of the uploaded sound file is not supported. Please use AAC, MIDI, MP3, MPEG, OGG, or WAV.
 use-lexicon=Use Lexicon? 
 web-addresses=Web Addresses
 work=Work
