Improved clear message configuration.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -9,6 +9,7 @@ appearance=Appearance
 birthplace=Birthplace
 calendar-requests=Calendar Requests
 calendars=Calendars
+clear-current-query-and-sorts=Clear current query and sorts
 columns=Columns
 contact-id=ID
 contact-manager=Contact Manager
