--- a/contact-manager-web/build.gradle
+++ b/contact-manager-web/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
     compileOnly group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
     compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
+    compileOnly group: "com.liferay", name: "com.liferay.application.list.api", version: "2.0.0"
     compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
