Add social-activity support.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,9 +2,17 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-06-24 00:54 by Christian Berndt
-# Version:  1.2.9
+# Modified: 2017-07-04 16:28 by Christian Berndt
+# Version:  1.3.0
 #
+activity-contact-add-contact={1} added a new contact, {2}.
+activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
+activity-contact-move-to-trash={1} moved a contact, {2}, to the Recycle Bin.
+activity-contact-move-to-trash-in={1} moved a contact, {2}, to the Recycle Bin in {0}.
+activity-contact-restore-from-trash={1} restored a contact, {2}, from the Recycle Bin.
+activity-contact-restore-from-trash-in={1} restored a contact, {2}, from the Recycle Bin in {0}.
+activity-contact-update-contact={1} updated a contact, {2}.
+activity-contact-update-contact-in={1} updated a contact, {2}, in {0}.
 appearance=Appearance
 birthplace=Birthplace
 calendar-requests=Calendar Requests
