Submit form onChange kind.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,8 +2,8 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-07-04 16:28 by Christian Berndt
-# Version:  1.3.0
+# Modified: 2017-07-09 14:15 by Christian Berndt
+# Version:  1.3.1
 #
 activity-contact-add-contact={1} added a new contact, {2}.
 activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
@@ -43,6 +43,7 @@ nickname-help=Specify the text corresponding to the nickname of the object the v
 no-contacts-were-found=No contacts were found. 
 no-import-processes-were-found=No import processes were found.
 office=Office
+org=Organization
 permissions-of-contact=Permissions of Contact
 personal-information=Personal Information
 phone.number-help=Specify the telephone number for telephony communication with the object the vCard represents.
