Improved name data handling for KIND.ORG

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -56,7 +56,7 @@ structured-name=Structured Name
 structured-name.additional=Middle
 structured-name.family=Last
 structured-name.given=First
-structured-name.prefix=Title
+structured-name.prefix=Prefix
 structured-name.suffix=Suffix
 the-image-file-format-is-not-supported=The format of the uploaded image file is not supported. Please use PNG, JPG, or GIF.
 the-key-file-format-is-not-supported=The format of the uploaded key file is not supported. Please use GPG, PGP, or X509.
