Download and unzip the liferay bundle.

--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,16 @@ task downloadBundle(type: Download) {
     src 'http://downloads.sourceforge.net/project/lportal/Liferay%20Portal/7.0.3%20GA4/liferay-ce-portal-tomcat-7.0-ga4-20170613175008905.zip'
     dest  file(bundles)
     overwrite false
-//    enabled !(file(liferay.liferayHome).exists())
+}
+
+task unzipBundle(type: Copy) {
+
+    dependsOn downloadBundle
+
+    from(zipTree(bundles))
+    into "../bundles/"
 }
 
 task initBundle() {
-    dependsOn downloadBundle
+    dependsOn unzipBundle 
 }
