--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,10 @@ buildscript {
 // apply plugin: "com.liferay.defaults.plugin"
 
 configure(subprojects.findAll {!it.childProjects}) {
-    apply plugin: "com.liferay.defaults.plugin"
+
+    if (parent.name == rootProject.name) {
+        apply plugin: "com.liferay.defaults.plugin"
+    }
 }
 
 def bundles = "bundles.zip"
