--- a/contact-manager-test/build.gradle
+++ b/contact-manager-test/build.gradle
@@ -9,6 +9,10 @@ dependencies {
     testIntegrationCompile project(":modules:ch-inofix-contact-manager:contact-manager-service")
 }
 
+jar {
+    enabled = false
+}
+
 startTestableTomcat {
     checkTimeout = 10 * 60 * 1000
 }
