--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -1,6 +1,10 @@
 dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
-//    compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.2"
+    compileOnly group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
+    compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.3"
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.1'    
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.1'
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.1'
     compileOnly group: "com.liferay", name: "com.liferay.exportimport.api", version: "2.0.0"
     compileOnly group: "com.liferay", name: "com.liferay.exportimport.service", version: "3.0.0" 
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
@@ -9,19 +13,10 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
     compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+    compileOnly group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
     compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly project(":modules:ch-inofix-contact-manager:contact-manager-api")
 }
-
-// dependencies {
-//    compileOnly group: 'com.github.mangstadt', name: 'vinnie', version: '2.0.0'
-//	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
-//	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
-//    compileOnly group: "org.apache.commons", name: "commons-lang3", version: "3.5"
-//    compile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
-//    compile group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
-//    compile group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
-// }
 
 buildService {
     apiDir = "../contact-manager-api/src/main/java"
