Add model.resource key.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,8 +2,8 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-07-09 14:15 by Christian Berndt
-# Version:  1.3.1
+# Modified: 2017-09-10 18:00 by Christian Berndt
+# Version:  1.3.2
 #
 activity-contact-add-contact={1} added a new contact, {2}.
 activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
@@ -37,6 +37,7 @@ kind-help=Specify the kind of object the vCard represents.
 logos=Logos
 logo.file-help=Select one or more graphic images of a logo associated with the object the vCard represents.
 mailing-address=Mailing Address
+model.resource.ch.inofix.contact.model.Contact=vCard
 new-contact=New Contact
 nickname=Nickname
 nickname-help=Specify the text corresponding to the nickname of the object the vCard represents. The nickname is the descriptive name given instead of or in addition to the one belonging to
