Add help messages for the vCard's general section.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -3,7 +3,7 @@
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
 # Modified: 2017-09-10 18:00 by Christian Berndt
-# Version:  1.3.2
+# Version:  1.3.3
 #
 activity-contact-add-contact={1} added a new contact, {2}.
 activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
@@ -17,6 +17,7 @@ appearance=Appearance
 birthplace=Birthplace
 calendar-requests=Calendar Requests
 calendars=Calendars
+categories-help=Specify application category information about the object the vCard represents.
 clear-current-query-and-sorts=Clear current query and sorts
 columns=Columns
 contact-id=ID
@@ -24,8 +25,9 @@ contact-manager=Contact Manager
 department=Department
 drop-a-v-card-file-here-to-import=Drop a vCard file here to import.
 email.address-help=Specify the electronic mail address for communication with the object the vCard represents.
+file-summary=File Summary
 formatted-name=Formatted Name
-formatted-name-help=Specify the formatted text corresponding to the name of the object the vCard represents.
+formatted-name-help=The formatted text corresponding to the name of the object the vCard represents.
 free-busy=Free / Busy 
 free-busy-url=Free / Busy URL
 import-export=Import / Export
@@ -55,13 +57,19 @@ sounds=Sounds
 sound.file-help=Specify one or more digital sound content informations that annotate some aspect of the vCard. This property is often used to specify the proper pronunciation of the name property value of the vCard.
 structured-name=Structured Name
 structured-name.additional=Middle
+structured-name.additional-help=The additional names of the object the vCard represents.
 structured-name.family=Last
+structured-name.family-help=The family names (also known as surnames) of the object the vCard represents.
 structured-name.given=First
+structured-name.given-help=The given names of the object the vCard represents.
 structured-name.prefix=Prefix
+structured-name.prefix-help=Honorific prefixes to the name.
 structured-name.suffix=Suffix
+structured-name.suffix-help=Honorific suffixes to the name.
 the-image-file-format-is-not-supported=The format of the uploaded image file is not supported. Please use PNG, JPG, or GIF.
 the-key-file-format-is-not-supported=The format of the uploaded key file is not supported. Please use GPG, PGP, or X509.
 the-sound-file-format-is-not-supported=The format of the uploaded sound file is not supported. Please use AAC, MIDI, MP3, MPEG, OGG, or WAV.
+this-file-was-previously-uploaded-but-not-actually-imported=This file was previously uploaded but not actually imported.
 use-lexicon=Use Lexicon? 
 web-addresses=Web Addresses
 work=Work
