--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,8 +2,8 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-09-10 18:00 by Christian Berndt
-# Version:  1.3.3
+# Modified: 2017-09-12 11:50 by Christian Berndt
+# Version:  1.3.4
 #
 activity-contact-add-contact={1} added a new contact, {2}.
 activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
@@ -14,7 +14,9 @@ activity-contact-restore-from-trash-in={1} restored a contact, {2}, from the Rec
 activity-contact-update-contact={1} updated a contact, {2}.
 activity-contact-update-contact-in={1} updated a contact, {2}, in {0}.
 appearance=Appearance
+birthday-help=Specify the birth date of the object the vCard represents.
 birthplace=Birthplace
+birthday-help=Specify the birth place of the object the vCard represents.
 calendar-requests=Calendar Requests
 calendars=Calendars
 categories-help=Specify application category information about the object the vCard represents.
@@ -53,6 +55,7 @@ phone.number-help=Specify the telephone number for telephony communication with 
 photos=Photos
 photo.file-help=Select one or more image or photograph information that annotates some aspect of the object the vCard represents.
 po-box=PO Box
+role-help=Specify the function or part played in a particular situation by the object the vCard represents.
 sounds=Sounds
 sound.file-help=Specify one or more digital sound content informations that annotate some aspect of the vCard. This property is often used to specify the proper pronunciation of the name property value of the vCard.
 structured-name=Structured Name
@@ -70,6 +73,7 @@ the-image-file-format-is-not-supported=The format of the uploaded image file is 
 the-key-file-format-is-not-supported=The format of the uploaded key file is not supported. Please use GPG, PGP, or X509.
 the-sound-file-format-is-not-supported=The format of the uploaded sound file is not supported. Please use AAC, MIDI, MP3, MPEG, OGG, or WAV.
 this-file-was-previously-uploaded-but-not-actually-imported=This file was previously uploaded but not actually imported.
+title-help=Specify the position or job of the object the vCard represents.
 use-lexicon=Use Lexicon? 
 web-addresses=Web Addresses
 work=Work
