Updated language properties.

--- a/contact-manager-web/src/main/resources/content/Language.properties
+++ b/contact-manager-web/src/main/resources/content/Language.properties
@@ -2,8 +2,8 @@
 # Language.properties: Default resource bundle of the contact-manager portlet
 # 
 # Created:  2015-05-07 15:32 by Christian Berndt
-# Modified: 2017-09-12 11:50 by Christian Berndt
-# Version:  1.3.4
+# Modified: 2017-09-16 00:15 by Christian Berndt
+# Version:  1.3.5
 #
 activity-contact-add-contact={1} added a new contact, {2}.
 activity-contact-add-contact-in={1} added a new contact, {2}, in {0}.
@@ -13,6 +13,10 @@ activity-contact-restore-from-trash={1} restored a contact, {2}, from the Recycl
 activity-contact-restore-from-trash-in={1} restored a contact, {2}, from the Recycle Bin in {0}.
 activity-contact-update-contact={1} updated a contact, {2}.
 activity-contact-update-contact-in={1} updated a contact, {2}, in {0}.
+address.locality-help=The city or locality of the address.
+address.po-box-help=Specify the post office box of the address.
+address.street-address-help=Specify the street and number of the address.
+address.type-help=Select the type of the address.
 appearance=Appearance
 birthday-help=Specify the birth date of the object the vCard represents.
 birthplace=Birthplace
