--- a/contact-manager-web/build.gradle
+++ b/contact-manager-web/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compileOnly group: "com.googlecode.ez-vcard", name: "ez-vcard", version: "0.10.3"
     compileOnly group: "com.liferay", name: "com.liferay.application.list.api", version: "2.0.0"
     compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
+    compileOnly group: "com.liferay", name: "com.liferay.portal.configuration.metatype", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
     compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
     compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
