--- a/contact-manager-service/build.gradle
+++ b/contact-manager-service/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
     compileOnly group: "com.liferay", name: "com.liferay.xstream.configurator.api", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+    compileOnly group: "com.thoughtworks.xstream", name: "xstream", version: "1.4.7"
     compileOnly group: "commons-lang", name: "commons-lang", version: "2.6"        
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
     compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
